@@ -49,6 +49,8 @@ v1.5.xxxx.0 - unreleased
  FIXED  : Ticket #791, Change the cursor behavior
  FIXED  : Ticket #796, MPC HC window doesn't stay snapped to desktop corners
  FIXED  : Ticket #809, Resize-arrows no longer appear with caption hidden
+ FIXED  : DVB Screen sizing: takes into account the TV Navigation panel
+ FIXED  : Workaround to avoid madVR renderer freezing when switching DVB channels
 
 
 v1.4.2499.0 - 7 September 2010
